--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,42 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <!-- Primary Meta Tags -->
+    <title>Freaky Vegan</title>
+    <meta name="title" content="Freaky Vegan" />
+    <meta
+      name="description"
+      content="Search for vegan cafes and restaurants, order ingredients, cakes and meals."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://freaky-vegan.herokuapp.com/" />
+    <meta property="og:title" content="Freaky Vegan" />
+    <meta
+      property="og:description"
+      content="Search for vegan cafes and restaurants, order ingredients, cakes and meals."
+    />
+    <meta property="og:image" content="../src/assets/pumpkin-cupcake.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://freaky-vegan.herokuapp.com/"
+    />
+    <meta property="twitter:title" content="Freaky Vegan" />
+    <meta
+      property="twitter:description"
+      content="Search for vegan cafes and restaurants, order ingredients, cakes and meals."
+    />
+    <meta
+      property="twitter:image"
+      content="../src/assets/pumpkin-cupcake.jpg"
+    />
+
+    <title>Freaky Vegan - Find places and order</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;700&display=swap"
@@ -34,8 +70,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
-    <title>Freaky Vegan - Find places and order</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
